# scrolled-quran

./: Cargo.toml  README.md
.github/workflows/: ci.yml
android/: Cargo.toml
android/src/: lib.rs
scripts/: convert-all.ts  deno.json
src/: about.txt  data.rs  lib.rs  main.rs  model.rs  view.rs  widgets.rs
src/flatbuffers/: ayahlist.fbs
src/view/: label.rs  portal.rs  virtual_hscroll.rs
src/widgets/: virtual_hscroll.rs
