[package]
name = "scrolled-quran"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["android"]

[dependencies]
accesskit = "0.21.1"
anyhow = "1.0.102"
color = "0.3.2"
jiff = { version = "0.2.21", features = ["serde"] }
masonry = { git = "https://github.com/linebender/xilem.git", rev = "007d652e88366637ae72e690cee04aa661b98998", version = "0.4.0" }
masonry_winit = { git = "https://github.com/linebender/xilem.git", rev = "007d652e88366637ae72e690cee04aa661b98998", version = "0.4.0" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
tracing = "0.1.44"
xilem = { git = "https://github.com/linebender/xilem.git", rev = "007d652e88366637ae72e690cee04aa661b98998", version = "0.4.0" }
xilem_understory_scroll = { git = "https://github.com/RagibHasin/xilem_understory_scroll.git", rev = "c22607421f363da54db762ccc702b27b1f786ff0" }

[dev-dependencies]
masonry = { git = "https://github.com/linebender/xilem.git", rev = "007d652e88366637ae72e690cee04aa661b98998", version = "0.4.0", features = [
  "testing"
] }
